# datalogic-rs

./: Cargo.toml  README.md  proposal-vm.md
examples/: benchmark.rs  usage.rs
src/: lib.rs
src/compiler/: const_pool.rs  lower.rs  mod.rs  types.rs
src/core/: jsonlogic.rs  mod.rs  tests.rs
src/engine/: mod.rs  stack.rs
src/operators/: arithmetic.rs  collection.rs  comparison.rs  logic.rs  misc.rs  mod.rs  string.rs
src/optimizer/: mod.rs  tests.rs
src/parser/: jsonlogic.rs  mod.rs  tests.rs
src/value/: compare.rs  convert.rs  mod.rs  tests.rs  truthy.rs
src/vm_stack/: mod.rs  tests.rs
tests/: test_jsonlogic.rs
tests/suites/: index.json  length.json  slice.json  sort.json  type.json
tests/suites/arithmetic/: abs.json  ceil.json  floor.json
tests/suites/array/: map.json
tests/suites/datetime/: datetime.json  duration.json  val.datetime.json
tests/suites/string/: string.json
