[package]
name = "datalogic-rs"
version = "3.0.24"
edition = "2021"
exclude = [".DS_Store", "/target", ".vscode", ".github"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "A fast, type-safe Rust implementation of JSONLogic for evaluating logical rules as JSON. Perfect for business rules engines and dynamic filtering in Rust applications."
readme = "README.md"
homepage = "https://github.com/codetiger/datalogic-rs"
repository = "https://github.com/codetiger/datalogic-rs"
keywords = ["rules", "engine", "json", "logic"]
categories = ["data-structures", "development-tools", "parsing"]

[dependencies]
datavalue-rs = "0.1"
bumpalo = { version = "3.17", features = ["collections", "boxed", "serde"] }
thiserror = "2.0"

